@@ -42,6 +42,7 @@ FILE_XLS = _resolve_file('./files/test_io/input-valid.xls')
 FILE_XLSX_BROKEN = _resolve_file('./files/test_io/input-broken.xlsx')
 FILE_XLSX_NOEXT = _resolve_file('./files/test_io/input-valid-xlsx.NOEXT')
 FILE_XLSX_MERGED = _resolve_file('./files/test_io/input-merged.xlsx')
+FILE_XLSX_INFO = _resolve_file('./files/test_io/input-quality.xlsx')
 FILE_JSON = _resolve_file('./files/test_io/input-valid.json')
 FILE_JSON_TXT = _resolve_file('./files/test_io/input-valid-json.txt')
 FILE_JSON_UNTAGGED = _resolve_file('./files/test_io/input-untagged.json')
@@ -151,6 +152,31 @@ class TestInput(unittest.TestCase):
             self.assertTrue(input.is_repeatable)
             header_row = next(iter(input))
             self.assertEqual("¿Qué?", header_row[1])
+
+    def test_xlsx_quality(self):
+        with make_input(FILE_XLSX_INFO, InputOptions(allow_local=True)) as input:
+            report = input.info()
+            self.assertEqual(2, len(report))
+
+            # Sheet 1
+            self.assertEqual("input-quality-no-hxl", report[0]["name"])
+            self.assertFalse(report[0]["is_hidden"]),
+            self.assertEqual(5, report[0]["nrows"]),
+            self.assertEqual(9, report[0]["ncols"]),
+            self.assertTrue(report[0]["has_merged_cells"])
+            self.assertFalse(report[0]["is_hxlated"])
+            self.assertEqual("56c6270ee039646436af590e874e6f67", report[0]["header_hash"])
+            self.assertTrue(report[0]["hashtag_hash"] is None)
+
+            # Sheet 2
+            self.assertEqual("input-quality-hxl", report[1]["name"])
+            self.assertFalse(report[1]["is_hidden"]),
+            self.assertEqual(6, report[1]["nrows"]),
+            self.assertEqual(9, report[1]["ncols"]),
+            self.assertFalse(report[1]["has_merged_cells"])
+            self.assertTrue(report[1]["is_hxlated"])
+            self.assertEqual("56c6270ee039646436af590e874e6f67", report[1]["header_hash"])
+            self.assertEqual("3252897e927737b2f6f423dccd07ac93", report[1]["hashtag_hash"])
 
     def test_ckan_resource(self):
         source = hxl.data('https://data.humdata.org/dataset/hxl-master-vocabulary-list/resource/d22dd1b6-2ff0-47ab-85c6-08aeb911a832')
